link up Readers to guarantee in-order arrival of messages